--- a/css/style.css
+++ b/css/style.css
@@ -3721,6 +3721,9 @@ svg .llms-animated-circle {
   position: sticky;
   top: 115px; }
 
+.sticky-filled .extra + div {
+  display: none !important; }
+
 @media only screen and (min-width: 50rem) {
   .yoast_academy .pagetitle {
     width: 30em;
